--- a/assets/css/theme.scss
+++ b/assets/css/theme.scss
@@ -132,6 +132,7 @@ sitemap:
 // @include foundation-prototype-classes;
 
 // --- Customization ---
+@import "theme/_article_layout";
 @import "theme/_navigation";
 @import "theme/_blog_layout";
 @import "theme/_list_customization";
