--- a/_sass/theme/_article_layout.scss
+++ b/_sass/theme/_article_layout.scss
@@ -1,7 +1,7 @@
 /* Article customization
 ------------------------------------------------------- */
 article {
-    counter-reset: cnt_fig cnt_table;
+    counter-reset: cnt_fig cnt_table cnt_vid;
     
     h1 {
 	margin-top: 3rem;
@@ -33,16 +33,27 @@ article {
     }
 
     table {
-	caption {
-	    caption-side: bottom;
-	    font-weight: normal;
+	    caption {
+	        caption-side: bottom;
+	        font-weight: normal;
+	        font-style: italic;
+	        line-height: 1.2;
+	    }
+	    caption::before {
+	        counter-increment: cnt_table;
+	        content: "Tabelle " counter(cnt_table) ": ";
+	    }
+    }
+
+    videocaption {
+	    text-align: center;
 	    font-style: italic;
 	    line-height: 1.2;
-	}
-	caption::before {
-	    counter-increment: cnt_table;
-	    content: "Tabelle " counter(cnt_table) ": ";
-	}
+    }
+
+    videocaption::before {
+	    counter-increment: cnt_vid;
+	    content: "Video " counter(cnt_vid) ": ";
     }
 
 
