--- a/_includes/insert_image.html
+++ b/_includes/insert_image.html
@@ -8,7 +8,7 @@
 {% assign data = page.figures[include.key] %}
 
 
-<div style="padding-bottom: 1.25rem; text-align: center;">
+<div class="image-container">
     <a href="{{ site.image_dir | append: page.image_dir  | append: "/" | append: data.filename | relative_url }}" data-featherlight="image" {% if data.caption %}caption="{{ data.caption }}"{% endif %} {% if data.label %}id="{{ data.label }}"{% endif %}>
         <img src="{{ site.image_dir | append: page.image_dir | append: "/" | append: data.filename | relative_url }}" {% if data.caption %}alt="{{ data.caption }}" {% endif %}>
     </a>
