--- a/_sass/theme/_article_layout.scss
+++ b/_sass/theme/_article_layout.scss
@@ -58,6 +58,15 @@ article {
 
 
     ul.bibliography {
-	list-style-type: decimal;
+	    list-style-type: decimal;
+    }
+
+    div.image-container {
+        padding-bottom: 1.25rem;
+        text-align: center;
+
+        img {
+            max-height: 700px;
+        }
     }
 }
