--- a/_sass/theme/_article_layout.scss
+++ b/_sass/theme/_article_layout.scss
@@ -1,7 +1,7 @@
 /* Article customization
 ------------------------------------------------------- */
 article {
-    counter-reset: cnt_fig cnt_table cnt_vid;
+    counter-reset: cnt_fig cnt_table cnt_vid cnt_gal;
     
     h1 {
 	margin-top: 3rem;
@@ -22,6 +22,7 @@ article {
     }
 
     figcaption {
+        margin-top: 0.8rem;
 	    text-align: center;
 	    font-style: italic;
 	    line-height: 1.2;
@@ -34,6 +35,7 @@ article {
 
     table {
 	    caption {
+            margin-top: 0.8rem;
 	        caption-side: bottom;
 	        font-weight: normal;
 	        font-style: italic;
@@ -46,6 +48,7 @@ article {
     }
 
     videocaption {
+        margin-top: 0.8rem;
 	    text-align: center;
 	    font-style: italic;
 	    line-height: 1.2;
@@ -54,6 +57,20 @@ article {
     videocaption::before {
 	    counter-increment: cnt_vid;
 	    content: "Video " counter(cnt_vid) ": ";
+    }
+
+    gallerycaption {
+        width: 100%;
+        margin-top: 0.8rem;
+	    text-align: center;
+	    font-style: italic;
+	    line-height: 1.2;
+        display: inline-block;
+    }
+
+    gallerycaption::before {
+	    counter-increment: cnt_gal;
+	    content: "Gallerie " counter(cnt_vid) ": ";
     }
 
 
@@ -68,5 +85,14 @@ article {
         img {
             max-height: 700px;
         }
+    }
+
+    div.video-container {
+        padding-bottom: 1.25rem;
+        text-align: center;
+
+        video {
+            max-height: 700px;
+        }       
     }
 }
