Added the Creative Commons icon font.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,6 +18,7 @@ custom_css:
         - featherlight.gallery.css
         - fontawesome-all.css
         - latofonts.css
+        - cc-icons.css
         - theme.css
 
 ---
