Added the license note include to the pages and doc_pages.

--- a/_layouts/doc_page.html
+++ b/_layouts/doc_page.html
@@ -71,6 +71,8 @@ layout: default
 		    <span itemprop="articleSection">
                       {{ content }}
 		    </span>
+
+            {% include license_note.html %}
 	      </article>
             </div>
         </div>
