Changed the copyright author to MSS Team.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -17,7 +17,7 @@
             FB-Nr.: 378631 k, Firmengericht: Handelsgericht Wien, UID: ATU67233013<br>
             <a href="http://www.wkoecg.at/Web/Ecg.aspx?FirmaID=c2b49d2a-4694-4d9b-b5e3-e1b495d24757" target="_blank">Informationspflicht laut ECG und Mediengesetz</a>&nbsp;&nbsp;<a href="{{ site.url | append: page.baseurl | append: '/data-privacy-statement/' | relative_url }}">{{ site.data.language[page.lang].data_privacy_statement }}</a><br>
 
-                    Copyright © Mertl Research GmbH<br>
+                    Copyright &#169; MSS Team<br>
               <a href="{{ site.url }}{{ site.baseurl }}/info/">{{ site.data.language[page.lang].more }}</a>
             </p>
           </div>
