--- a/_sass/theme/_article_layout.scss
+++ b/_sass/theme/_article_layout.scss
@@ -92,6 +92,7 @@ article {
         text-align: center;
 
         video {
+            width: 100%;
             max-height: 700px;
         }       
     }
