Removed the sticky Doc table of content. I couldn't make it work together with the sticky main navigation.

--- a/_layouts/doc_page.html
+++ b/_layouts/doc_page.html
@@ -2,8 +2,8 @@
 layout: default
 ---
 
-            <div id="small_doc_nav_sticky_container" class="show-for-small-only" data-sticky-container>
-                <div class="sticky sticky-topbar is-at-top" data-sticky data-options="anchor: page; marginTop: 3.5; stickyOn: small;" style="width: 100%">
+            <div id="small_doc_nav_sticky_container" class="show-for-small-only">
+                <div style="width: 100%">
                     <div id="small-doc-toc-nav" class="title-bar" style="background: gray;" data-responsive-toggle="small_doc_toc_menu" data-hide-for="medium">
                         <div class="title-bar-left">
                         </div>
