--- a/_sass/theme/_article_layout.scss
+++ b/_sass/theme/_article_layout.scss
@@ -70,7 +70,7 @@ article {
 
     gallerycaption::before {
 	    counter-increment: cnt_gal;
-	    content: "Gallerie " counter(cnt_vid) ": ";
+	    content: "Gallerie " counter(cnt_gal) ": ";
     }
 
 
