Added the umami tracking script.

--- a/_includes/head_common.html
+++ b/_includes/head_common.html
@@ -24,3 +24,5 @@
 {% unless page.style == NULL %}
 <style type="text/css">{{ page.style }}</style>
 {% endunless %}
+
+<script async defer data-website-id="ae916af7-e557-4fc5-a318-92e14ba252ff" src="https://taubi.mertl-research.at/umami.js"></script>
