Added the website url to the license note.

--- a/_includes/license_note.html
+++ b/_includes/license_note.html
@@ -16,7 +16,7 @@
     {% endif %}
     <p class="title">Dieser Artikel ist unter einer <a href="{{license.url}}" target="blank">{{license.name_long[page.lang]}} Lizenz</a> lizensiert.</p>
     <p class="description">{{license.description[page.lang]}}</p>
-    <p class="attribution">Wenn möglich, verwenden Sie die folgende Form um diesen Artikel zu zitieren:<br><a href="{{page.url}}">"{{page.title}}"</a>, <a href="/info" target="blank">{{page.copyright.author}}</a>, {{page.date | date: '%Y-%m-%d'}}, lizensiert unter <a href="{{license.url}}" target="_blank">{{license.name[page.lang]}}</a></p>
+    <p class="attribution">Wenn möglich, verwenden Sie die folgende Form um diesen Artikel zu zitieren:<br><a href="{{page.url}}">"{{page.title}}"</a>, <a href="/info" target="blank">{{page.copyright.author}}</a>, {{page.date | date: '%Y-%m-%d'}}, <a href="https://www.macroseismicsensor.at">www.macroseismicsensor.at</a>, lizensiert unter <a href="{{license.url}}" target="_blank">{{license.name[page.lang]}}</a></p>
   </div>
 </div>
 {% elsif page.copyright %}
