Added the support for markdown formatting in the blog article teaser.

--- a/_includes/blog_paginated.html
+++ b/_includes/blog_paginated.html
@@ -26,9 +26,9 @@
 
                 <p class="content">
                     {% if post.meta_description %}
-                    {{ post.meta_description | strip_html | escape }}
+                    {{ post.meta_description | strip_html | markdownify }}
                     {% elsif post.teaser %}
-                    {{ post.teaser | strip_html | escape }}
+                    {{ post.teaser | strip_html | markdownify }}
                     {% endif %}
                 </p>
 
