--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -30,7 +30,7 @@ layout: default
 
 			{% if page.teaser %}
 			<p class="teaser" itemprop="description">
-				{{ page.teaser }}
+				{{ page.teaser | markdownify }}
 			</p>
 			{% endif %}
 
