--- a/_includes/insert_image.html
+++ b/_includes/insert_image.html
@@ -23,7 +23,7 @@
 
     {% if caption or credit %}
         <figcaption>
-            {% if caption %}{{ caption | markdownify | remove: "<p>" | remove: "</p>" }}{% endif %} {%if credit %}<i>{{ credit }}</i>{% endif %}
+            {% if caption %}{{ caption | flatify | markdownify | remove: "<p>" | remove: "</p>" }}{% endif %} {%if credit %}<i>{{ credit }}</i>{% endif %}
         </figcaption>
     {% endif %}
     
