--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -7,7 +7,7 @@ layout: default
 			<header>
 				{% if page.image.title %}
 				<figure>
-					<img src="{{ site.urlimg }}{{ page.image.title }}" width="970" alt="{{ page.title | escape_once }}" itemprop="image">
+					<img src="{{ site.urlimg }}{{ page.image.title }}" width="970" alt="{{ page.title | flatify | escape_once }}" itemprop="image">
 
 					{% if page.image.caption_url and page.image.caption %}
 					<figcaption class="text-right">
@@ -22,15 +22,15 @@ layout: default
 				{% endif %}
 
 				<span itemprop="name">
-					{% if page.subheadline %}<p class="subheadline">{{ page.subheadline }}</p>{% endif %}
-					<h1>{{ page.title }}</h1>
+					{% if page.subheadline %}<p class="subheadline">{{ page.subheadline | flatify }}</p>{% endif %}
+					<h1>{{ page.title | flatify}}</h1>
 				</span>
 			</header>
 
 
 			{% if page.teaser %}
 			<p class="teaser" itemprop="description">
-				{{ page.teaser | markdownify }}
+				{{ page.teaser | flatify | markdownify }}
 			</p>
 			{% endif %}
 
