--- a/_sass/theme/_article_layout.scss
+++ b/_sass/theme/_article_layout.scss
@@ -59,6 +59,10 @@ article {
 	    content: "Video " counter(cnt_vid) ": ";
     }
 
+    div.gallery {
+        padding-bottom: 1em;
+    }
+    
     gallerycaption {
         width: 100%;
         margin-top: 0.8rem;
