--- a/_includes/head_common.html
+++ b/_includes/head_common.html
@@ -25,4 +25,4 @@
 <style type="text/css">{{ page.style }}</style>
 {% endunless %}
 
-<script async defer data-website-id="ae916af7-e557-4fc5-a318-92e14ba252ff" src="https://taubi.mertl-research.at/umami.js"></script>
+<script async defer data-website-id="ae916af7-e557-4fc5-a318-92e14ba252ff" src="https://taubi.mertl-research.at/mr_cookieless_webanalyze.js"></script>
