Fixed the display of the top bar navigation on small screens.

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -9,8 +9,8 @@
                 <button class="menu-icon" type="button" data-toggle="top-nav"></button>
             </div>
         </div>        
-        <div id="top-nav" class="top-bar hide-for-small-only">
-            <div class="top-bar-title">
+        <div id="top-nav" class="top-bar">
+            <div class="top-bar-title hide-for-small-only">
                 <ul class="menu simple">
                     <li class="top-bar-title-logo">
                         <a href="{{ site.url | relative_url}}" title="Zur Hauptseite">
