Use the relative url for the download link.

--- a/_layouts/bibtemplate.html
+++ b/_layouts/bibtemplate.html
@@ -18,7 +18,7 @@
 {% endif %}
 
 {% if entry.local_url %}
-<a href="{{ site.url }}/assets/doc/{{ entry.local_url }}">download pdf</a><br>
+<a href="{{ entry.local_url | prepend: '/assets/doc/' | relative_url }}">download pdf</a><br>
 {% endif %}
 
 {% if entry.code %}
